Tue Jul 17 04:03:24 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * Kokyu/Dispatch_Deferrer.cpp:
        * ace/FoxReactor/FoxReactor.h:
        * apps/JAWS/clients/Caching/http_client.cpp:
        * apps/JAWS/clients/WebSTONE/src/nsapi-includes/base/crit.h:
        * apps/JAWS/clients/WebSTONE/src/nsapi-includes/base/dll.h:
        * apps/JAWS/clients/WebSTONE/src/nsapi-includes/base/file.h:
        * apps/JAWS/clients/WebSTONE/src/nsapi-includes/base/nterrors.h:
        * apps/JAWS/clients/WebSTONE/src/nsapi-includes/base/sem.h:
        * apps/JAWS/clients/WebSTONE/src/parse_file_list.c:
        * apps/JAWS/clients/WebSTONE/src/rexec.c:
        * apps/JAWS/clients/WebSTONE/src/sysdep.h:
        * apps/JAWS/clients/WebSTONE/src/sysdep.c:
        * apps/JAWS/clients/WebSTONE/src/webclient.c:
        * apps/JAWS/stress_testing/http_tester.cpp:
        * apps/JAWS/stress_testing/util.cpp:
        * apps/JAWS2/JAWS/Parse_Headers.cpp:
        * apps/JAWS3/bench/rqfiles.cpp:
        * apps/JAWS3/jaws3/Cached_Allocator_T.cpp:
        * contrib/FaCE/CE_Screen_Output.cpp:
        * contrib/FaCE/FaCE.cpp:
        * contrib/FaCE/FaCE_OS.h:
        * contrib/minizip/crypt.h:
        * contrib/minizip/ioapi.c:
        * contrib/minizip/miniunz.c:
        * contrib/minizip/minizip.c:
        * contrib/minizip/mztools.c:
        * contrib/minizip/unzip.c:
        * contrib/minizip/zip.c:
        * examples/APG/Shared_Memory/PI_Malloc.cpp:
        * examples/IPC_SAP/ATM_SAP/CPP-client.cpp:
        * examples/Log_Msg/Log_Msg_MFC/Log_Msg_MFCDlg.h:
        * examples/Log_Msg/Log_Msg_MFC/Log_Msg_MFCDlg.cpp:
        * examples/Misc/test_XtReactor1.cpp:
        * examples/Misc/test_XtReactor2.cpp:
        * examples/Naming/test_multiple_contexts.cpp:
        * examples/Naming/test_writers.cpp:
        * examples/OS/Process/imore.cpp:
        * examples/OS/Process/process.cpp:
        * examples/Reactor/Multicast/Log_Wrapper.cpp: